# raytracing_in_one_weekend-rs

./: Cargo.toml  README.md  out.ppm
src/: camera.rs  helpers.rs  hittable.rs  main.rs  material.rs  ray.rs
src/hittables/: sphere.rs
src/materials/: dielectric.rs  lambertian.rs  metal.rs  mod.rs
src/objects/: sphere.rs
