[package]
name = "raytracing_in_one_weekend-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
rayon = "1.5.2"

[dependencies.glam]
version = "0.20.5"
features = ["debug-glam-assert"]

[dependencies.rand]
version = "0.8.5"
features = ["small_rng"]

[profile.release]
codegen-units = 1
lto = true
panic = "abort"